--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/ocr-a-std');
+
 /* sets the box sizing to make elements size include borders and padding */
 *,
 *::before,
@@ -14,7 +16,7 @@ html {
 /* places images on their own block container and prevents them from expanding beyond their original size */
 img {
     display: block;
-    max-width: 100%;
+    max-width: 100%;s
     height: auto;
 }
 
@@ -42,4 +44,54 @@ article ul {
 a {
     text-underline-position: under;
     text-decoration-thickness: 8;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(23, 100, 23);
+}
+
+.header, .content, .footer {
+    display: flex;
+    flex: 1 1 auto;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.header h1{
+    font-family: 'OCR A Std';
+    font-size: 5rem;
+}
+
+.settings-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    font-size: 20px;
+}
+
+
+.slide-container {
+    display: flex;
+    flex: 1 1 auto;
+    width: 600px;
+}
+
+.slider {
+    flex: 0 1 500px;
+}
+
+.footer {
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+}
+
+.footer img{
+    max-height: 50px;
 }
