--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,17 @@ a {
 body {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
     background-color: rgb(23, 100, 23);
 }
 
 .header, .content, .footer {
     display: flex;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -66,22 +70,35 @@ body {
     font-size: 5rem;
 }
 
+.content {
+    flex: 1 1 auto;
+    gap: 20%;
+}
+
 .settings-container {
     display: flex;
     flex-direction: column;
-    flex: 1 1 auto;
+    flex: 0 1 30%;
     font-size: 20px;
 }
 
 
-.slide-container {
+.slide-container{
     display: flex;
     flex: 1 1 auto;
-    width: 600px;
+
+}
+
+.drawing-container {
+    display: flex;
+    height: 700px;
+    width: 700px;
+    background-color: white;
+    border-style: solid;
 }
 
 .slider {
-    flex: 0 1 500px;
+    flex: 1 1 auto;
 }
 
 .footer {
