--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ html {
 /* places images on their own block container and prevents them from expanding beyond their original size */
 img {
     display: block;
-    max-width: 100%;s
+    max-width: 100%;
     height: auto;
 }
 
@@ -78,6 +78,7 @@ body {
 .settings-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex: 0 1 30%;
     font-size: 20px;
 }
@@ -85,16 +86,15 @@ body {
 
 .slide-container{
     display: flex;
+    align-self: stretch;
     flex: 1 1 auto;
-
 }
 
-.drawing-container {
+.grid {
     display: flex;
     height: 700px;
     width: 700px;
-    background-color: white;
-    border-style: solid;
+    border-radius: 5px;
 }
 
 .slider {
