--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    background-color: rgb(23, 100, 23);
+    background-color: teal;
 }
 
 .header, .content, .footer {
@@ -90,11 +90,37 @@ body {
     flex: 1 1 auto;
 }
 
+.option-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.option-container button{
+    width: 100px;
+    height: 50px;
+    padding: 0;
+    border: 5px solid #465448;
+    background-color: orange;
+}
+
+.color-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    border: 2px dashed white;
+    padding: 10px;
+}
+
 .grid {
     display: flex;
+    flex-wrap: wrap;
     height: 700px;
     width: 700px;
     border-radius: 5px;
+    flex: 0 0 auto;
 }
 
 .slider {
