--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    background-color: teal;
+    background-color: rgb(0, 128, 128);
 }
 
 .header, .content, .footer {
@@ -105,7 +105,7 @@ body {
     width: 100px;
     height: 50px;
     padding: 0;
-    border: 5px solid #465448;
+    border: 5px solid rgb(70, 84, 72);
     background-color:  rgba(68, 185, 68, 0.411);
     border-radius: 2px;
     box-shadow: -2px -2px 2px 1px rgb(47, 66, 47);
@@ -134,7 +134,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 5px;
-    border: 2px dashed white;
+    border: 2px dashed rgb(255, 255, 255);
     padding: 10px;
 }
 
